Travis: improve script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 compiler:
  - gcc
 
+env:
+  global:
+    - GH_REPO_NAME: supercollider
+    - GH_REPO_REF: www.github.com/brianlheim/supercollider.git
+
 matrix:
   fast_finish: true
   include:
@@ -17,6 +22,10 @@ matrix:
     - os: osx
       osx_image: xcode7.3
       env: QT=true
+
+branches:
+  except:
+    - gh-pages
 
 cache:
  - apt
@@ -38,7 +47,11 @@ script:
  - $TRAVIS_BUILD_DIR/.travis/script-$TRAVIS_OS_NAME.sh
  - $TRAVIS_BUILD_DIR/.travis/test.sh
  - if [[ $TRAVIS_OS_NAME == osx ]]; then $TRAVIS_BUILD_DIR/.travis/package-osx.sh; fi
- - if [[ $DEPLOY_DOCS == true ]]; then $TRAVIS_BUILD_DIR/.travis/gen-and-deploy-cpp-docs.sh; fi
+ - if [[ $DEPLOY_DOCS == true ]]
+ -   cd $TRAVIS_BUILD_DIR
+ -   chmod +x .travis/gen-and-deploy-cpp-docs.sh
+ -   .travis/gen-and-deploy-cpp-docs.sh
+ - fi
 
 before_deploy:
  # required for github releases
