Travis: just put the command on one line

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,10 +48,7 @@ script:
  - $TRAVIS_BUILD_DIR/.travis/script-$TRAVIS_OS_NAME.sh
  - $TRAVIS_BUILD_DIR/.travis/test.sh
  - if [[ $TRAVIS_OS_NAME == osx ]]; then $TRAVIS_BUILD_DIR/.travis/package-osx.sh; fi
- - if [[ $DEPLOY_DOCS == true ]]; then
- -   cd $TRAVIS_BUILD_DIR
- -   chmod +x .travis/gen-and-deploy-cpp-docs.sh
- -   .travis/gen-and-deploy-cpp-docs.sh
+ - if [[ $DEPLOY_DOCS == true ]]; then cd $TRAVIS_BUILD_DIR; chmod +x .travis/gen-and-deploy-cpp-docs.sh; .travis/gen-and-deploy-cpp-docs.sh; fi
  - fi
 
 before_deploy:
