--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language: cpp
+
 compiler:
  - gcc
 
@@ -17,10 +19,6 @@ matrix:
     - os: osx # OS X 10.11
       osx_image: xcode7.3
       env: QT=true
-
-cache:
- - apt # ? does this do anything?
- - bundler # ? is this necessary? no ruby in this repo it seems
 
 before_install:
  - $TRAVIS_BUILD_DIR/.travis/before-install-$TRAVIS_OS_NAME.sh --qt=$QT
