--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,23 @@
 compiler:
  - gcc
 
+env:
+ - QT=true
+ - QT=false
+
+os:
+ - linux
+ - osx
+
+sudo: true
+dist: trusty
+
+osx_image:
+ - xcode7.3
+ - xcode8.3
+
 matrix:
   fast_finish: true # stop all other builds as soon as one fails
-  include:
-    - os: linux # Ubuntu 14.04
-      sudo: required
-      dist: trusty
-      env: QT=true
-      group: edge # can be removed now
-    - os: linux # Ubuntu 14.04
-      sudo: required
-      dist: trusty
-      env: QT=false
-      group: edge # can be removed now
-    - os: osx # OS X 10.11
-      osx_image: xcode7.3
-      env: QT=true
 
 cache:
  - apt # ? does this do anything?
