--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language: cpp
+
 compiler:
  - gcc
 
@@ -11,10 +13,7 @@ os:
 
 sudo: true
 dist: trusty
-
-osx_image:
- - xcode7.3
- - xcode8.3
+osx_image: xcode8.3
 
 matrix:
   fast_finish: true # stop all other builds as soon as one fails
