--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,15 +3,15 @@ if (NOT APPLE AND NOT WIN32)
 	add_definitions("-DSC_PLUGIN_EXT=\".so\"")
 endif()
 
-include_directories(${CMAKE_SOURCE_DIR}/external_libraries
-					${CMAKE_SOURCE_DIR}/external_libraries/nova-simd
-					${CMAKE_SOURCE_DIR}/external_libraries/nova-tt
+include_directories("${CMAKE_SOURCE_DIR}/external_libraries"
+					"${CMAKE_SOURCE_DIR}/external_libraries/nova-simd"
+					"${CMAKE_SOURCE_DIR}/external_libraries/nova-tt"
 					)
 
 if (Boost_FOUND)
-	include_directories(${Boost_INCLUDE_DIRS})
+	include_directories("${Boost_INCLUDE_DIRS}")
 else()
-	include_directories(${CMAKE_SOURCE_DIR}/external_libraries/boost)
+	include_directories("${CMAKE_SOURCE_DIR}/external_libraries/boost")
 endif()
 
 # here we choose who provides us with the FFT lib
