cmake: escape paths in platform/windows/cmakelists

--- a/platform/windows/CMakeLists.txt
+++ b/platform/windows/CMakeLists.txt
@@ -5,7 +5,8 @@
 add_custom_target(install_server_only
     COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_INSTALL_PREFIX}/server"
     COMMAND ${CMAKE_COMMAND} -E copy_directory $<TARGET_FILE_DIR:scsynth> "${CMAKE_INSTALL_PREFIX}/server"
-    COMMAND ${CMAKE_COMMAND} "-DSC_WIN_SERVER_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/server" "-DSC_WIN_DLL_DIRS=${SC_WIN_DLL_DIRS}" -P "${CMAKE_CURRENT_SOURCE_DIR}/server_bundle.cmake"
+    COMMAND ${CMAKE_COMMAND} "-DSC_WIN_SERVER_INSTALL_PREFIX=\"${CMAKE_INSTALL_PREFIX}/server\""
+    "-DSC_WIN_DLL_DIRS=\"${SC_WIN_DLL_DIRS}\"" -P "${CMAKE_CURRENT_SOURCE_DIR}/server_bundle.cmake"
     COMMENT "Copying target server to folder install_prefix/server and checking for dependencies (MS runtimes are not copied! See README_WINDOWS.md) ..."
     DEPENDS scsynth
     VERBATIM
@@ -37,11 +38,11 @@ add_custom_target( installer
     COMMAND ${CMAKE_COMMAND}
         "-DSC_VERSION=${PROJECT_VERSION}"
         "-DSC_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}"
-        "-DNSIS_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/supercollider.nsi"
-        "-DSC_CUBE_PATH=${CMAKE_CURRENT_SOURCE_DIR}/Resources/sc_cube.ico"
+        "-DNSIS_SCRIPT=\"${CMAKE_CURRENT_SOURCE_DIR}/supercollider.nsi\""
+        "-DSC_CUBE_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/Resources/sc_cube.ico\""
         "-DBUILD_DEF=$<CONFIG>-${CMAKE_LIBRARY_ARCHITECTURE}-${BUILD_ENV}-${GIT_COMMIT_HASH}"
         "-DTARGET_ARCH=${CMAKE_LIBRARY_ARCHITECTURE}"
-        "-DSC_WIN_BUNDLE_NAME=${SC_WIN_BUNDLE_NAME}"
+        "-DSC_WIN_BUNDLE_NAME=\"${SC_WIN_BUNDLE_NAME}\""
         "-DSC_WIN_INSTALL_SIZE=${SC_WIN_INSTALL_SIZE}"
         -P "${CMAKE_CURRENT_SOURCE_DIR}/package.cmake"
     COMMENT "Building the installer..."
