cmake: escape paths in testsuite cmakelists

--- a/testsuite/sclang/CMakeLists.txt
+++ b/testsuite/sclang/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(SCLANG ${CMAKE_CURRENT_BINARY_DIR}/../../lang/sclang${CMAKE_EXECUTABLE_SUFFIX}
-							-l ${CMAKE_CURRENT_BINARY_DIR}/../../build_sclang.cfg)
+set(SCLANG "${CMAKE_CURRENT_BINARY_DIR}/../../lang/sclang${CMAKE_EXECUTABLE_SUFFIX}
+							-l ${CMAKE_CURRENT_BINARY_DIR}/../../build_sclang.cfg")
 
 file(GLOB tests *.scd)
 
